up and run as docker container
